@@ -240,7 +240,6 @@
   (xgrab-init-pointer)
   (xgrab-init-keyboard)
   (init-last-child)
-  (reset-help-menu-list)
   (call-hook *binding-hook*)
   (map-window *no-focus-window*)
   (dbg *display*)
